# rusty-join

./: .gitignore  Cargo.toml  README.md  output.txt  split.sh
benches/: simple.rs
src/: all_hash.rs  encoder.rs  helper.rs  lib.rs  main.rs  quintuple_sort.rs  quintuple_sort_new.rs  split_during_read.rs  split_no_encode.rs  split_no_encode_parallel.rs  split_no_encode_pattern_matching.rs
src/versions/: baseline_v1.rs  baseline_v2.rs  baseline_v3.rs  baseline_v4.rs  hash_v1.rs  hash_v2.rs  hash_v3.rs  hash_v4.rs  hash_v5.rs  hash_v6.rs  hash_v7.rs  hash_v8.rs  hash_v9.rs  history_v1.rs  history_v2.rs  history_v3.rs  mod.rs  parallel_hash.rs  parallel_reduced_hash.rs  polars.rs  reduced_hash_v1.rs  reduced_hash_v2.rs  reduced_hash_v3.rs  reduced_hash_v4.rs  sorting_v1.rs  sorting_v2.rs  sorting_v3.rs
src/versions/diffs/: baseline_v1_v2.diff  baseline_v2_v3.diff  baseline_v3_v4.diff  hash_v1_v2.diff  hash_v2_v3.diff  hash_v3_v4.diff  hash_v4_v5.diff  hash_v5_v6.diff  hash_v6_v7.diff  hash_v7_v8.diff  hash_v8_v9.diff  hash_v9_parallel.diff  history_v1_v2.diff  history_v2_v3.diff  reduced_hash_v1_v2.diff  reduced_hash_v2_v3.diff  reduced_hash_v3_v4.diff  reduced_hash_v4_parallel.diff  sorting_v1_v2.diff  sorting_v2_v3.diff
src/versions/diffs/acrossVersions/: baseline_history.diff  hash_reduced_hash.diff  history_sorting.diff
src/versions/retired/: history_v3.rs  sorting_v1.rs
