[package]
name = "rusty-join"
version = "0.1.0"
edition = "2021"

[dependencies]
generic-array = "1.1.0"
typenum = "1.17.0"
rustc-hash = "2.0.0"
lazy_static = "1.5.0"
criterion-cycles-per-byte = "0.6.1"
compact_str = "0.8.0"
polars = { version = "0.45.0", features = ["csv"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
lto = true
debug = true

[[bench]]
name = "simple"
harness = false
